// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`history-service > merge by time 1`] = `
[
  [
    {
      "type": "mergeByTime",
      "value": {
        "test": 1,
      },
    },
    {
      "type": "mergeByTime",
      "value": {
        "test": 2,
      },
    },
    {
      "type": "mergeByTime",
      "value": {
        "test": 3,
      },
    },
    {
      "type": "mergeByTime",
      "value": {
        "test": 4,
      },
    },
  ],
]
`;

exports[`history-service > push operation should return correct history options 1`] = `
[
  {
    "label": "插入节点2",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test2",
        "id": 2,
      },
      "parentId": 1,
    },
  },
  {
    "label": "插入节点3",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test3",
        "id": 3,
      },
      "parentId": 2,
    },
  },
]
`;

exports[`history-service > push operation when limited should not increase the length 1`] = `
[
  [
    {
      "type": "insert-node",
      "value": {
        "index": 0,
        "node": {
          "children": [],
          "data": "test3",
          "id": 3,
        },
        "parentId": 2,
      },
    },
  ],
  [
    {
      "type": "insert-node",
      "value": {
        "index": 0,
        "node": {
          "children": [],
          "data": "test4",
          "id": 4,
        },
        "parentId": 2,
      },
    },
  ],
]
`;

exports[`history-service > push undo redo multi times should get correct tree and history options 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": "test4",
          "id": 4,
        },
        {
          "children": [],
          "data": "test3",
          "id": 3,
        },
      ],
      "data": "test2",
      "id": 2,
    },
  ],
  "data": "test",
  "id": 1,
}
`;

exports[`history-service > push undo redo multi times should get correct tree and history options 2`] = `
[
  {
    "label": "插入节点2",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test2",
        "id": 2,
      },
      "parentId": 1,
    },
  },
  {
    "label": "插入节点3",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test3",
        "id": 3,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点4",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点5",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test5",
        "id": 5,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test5",
        "id": 5,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点4",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点4",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
]
`;

exports[`history-service > transact 1`] = `
[
  {
    "label": "插入节点2",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test2",
        "id": 2,
      },
      "parentId": 1,
    },
  },
  {
    "label": "插入节点3",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test3",
        "id": 3,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点4",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "插入节点5",
    "type": "insert-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test5",
        "id": 5,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test5",
        "id": 5,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test4",
        "id": 4,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test3",
        "id": 3,
      },
      "parentId": 2,
    },
  },
  {
    "label": "delete-node",
    "type": "delete-node",
    "value": {
      "index": 0,
      "node": {
        "children": [],
        "data": "test2",
        "id": 2,
      },
      "parentId": 1,
    },
  },
]
`;
